--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,29 +1,44 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI
-
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+name: Email Checker
+on: [push]
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  checking_email:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    env:
+      CACHE_KEY: cache-641dc02
+      
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/cache@v4
-      - name: prime-cache-641dc02
-        run: echo Caching Miss
+      # 1. Checkout repository (Must be first to access requirements.txt)
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
+      # 2. Set up Python (Required for dependencies)
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      # 3. ADDED: The actual Caching Step
+      - name: Cache Python dependencies
+        id: cache-step # <--- ID is REQUIRED to reference its output!
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          # Key uses the env variable and requirements.txt hash
+          key: ${{ runner.os }}-${{ env.CACHE_KEY }}-${{ hashFiles('requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-${{ env.CACHE_KEY }}-
+
+      # 4. Corrected prime-cache step
+      - name: prime-cache-641dc02
+        run: | # <--- Use pipe for multi-line shell script
+          CACHE_STATUS="Cache Hit"
+          # Check the output of the step with id 'cache-step'
+          if [[ "${{ steps.cache-step.outputs.cache-hit }}" != "true" ]]; then
+            CACHE_STATUS="Cache Miss"
+          fi
+          # FIX: use a space instead of a comma
+          echo "Cache result for cache-641dc02: $CACHE_STATUS"
+
+      # 5. Your original step (moved to later, though placement doesn't matter much)
+      - name: '22f1000422@ds.study.iitm.ac.in'
+        run: echo "Email checker ran successfully"
