--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -18,7 +18,7 @@ jobs:
         
         # ADDED: Explicitly checkout the main branch
         with:
-          ref: main
+          ref: master
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0 
 
